# ChangeLog for dev-ruby/thinking-sphinx
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 May 2015; Hans de Graaff <graaff@gentoo.org> thinking-sphinx-3.1.3.ebuild:
  Version bump.

*thinking-sphinx-3.1.3 (22 May 2015)

  22 May 2015; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-3.1.3.ebuild:
  Version bump.

  02 Jul 2014; Hans de Graaff <graaff@gentoo.org> thinking-sphinx-3.1.1.ebuild:
  Add ruby20.

*thinking-sphinx-3.1.1 (24 Apr 2014)

  24 Apr 2014; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-3.1.1.ebuild:
  Version bump.

  27 Feb 2014; Hans de Graaff <graaff@gentoo.org> thinking-sphinx-3.1.0.ebuild:
  Use a separate SLOT for thinking sphinx 3.1.

*thinking-sphinx-3.1.0 (07 Feb 2014)

  07 Feb 2014; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-3.1.0.ebuild:
  Version bump.

  07 Feb 2014; Hans de Graaff <graaff@gentoo.org>
  -thinking-sphinx-2.0.11.ebuild, -thinking-sphinx-2.0.13.ebuild,
  -thinking-sphinx-3.0.4.ebuild:
  Cleanup.

*thinking-sphinx-3.0.6 (16 Dec 2013)

  16 Dec 2013; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-3.0.6.ebuild:
  Version bump.

*thinking-sphinx-3.0.4 (24 Jul 2013)

  24 Jul 2013; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-3.0.4.ebuild:
  Version bump.

*thinking-sphinx-2.0.14 (11 Jan 2013)

  11 Jan 2013; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-2.0.14.ebuild:
  Version bump.

  11 Jan 2013; Hans de Graaff <graaff@gentoo.org>
  -thinking-sphinx-1.4.0.ebuild, -thinking-sphinx-1.4.6.ebuild:
  Remove old slots that I no longer need.

*thinking-sphinx-2.0.13 (14 Sep 2012)

  14 Sep 2012; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-2.0.13.ebuild:
  Version bump.

  08 Jun 2012; Hans de Graaff <graaff@gentoo.org>
  -thinking-sphinx-1.3.20.ebuild, -thinking-sphinx-1.4.5.ebuild,
  -thinking-sphinx-2.0.7.ebuild, -thinking-sphinx-2.0.10.ebuild:
  Remove old versions.

*thinking-sphinx-2.0.11 (09 Mar 2012)
