@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*thinking-sphinx-3.1.4 (03 Jun 2015)
+
+  03 Jun 2015; Hans de Graaff <graaff@gentoo.org>
+  +thinking-sphinx-3.1.4.ebuild:
+  Version bump.
+
   22 May 2015; Hans de Graaff <graaff@gentoo.org> thinking-sphinx-3.1.3.ebuild:
   Version bump.
 
